[workspace]
resolver = "2" # What does this do?

[package]
name = "rui"
description = "Experimental Declarative UI library"
version = "0.6.1"
license = "MIT"
readme = "README.md"
authors = ["Taylor Holliday <taylor@audulus.com>"]
keywords = ["ui", "gui", "declarative"]
categories = ["gui"]
repository = "https://github.com/audulus/rui"
edition = "2018"
exclude = [ "screenshots/*" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "winit" ]

[dependencies]
euclid = "0.22.7"
wgpu = "0.19.0"
futures = "0.3"
vger = { git = "https://github.com/audulus/vger-rs", rev = "fa4a1d4b67a8f6d4a463263652e07bfab99a6caa" }
accesskit = "0.11.0"
lazy_static = "1.4.0"
winit = { version = "0.30", optional = true }
log = "0.4"

# Seems we can't publish to crates.io with this dependency.
# baseview = { git = "https://github.com/RustAudio/baseview", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.76"
web-sys = { version = "^0.3.61", features = ["Location"] }
console_log = "0.1.2"
console_error_panic_hook = "0.1.6"
